# pkpw

./: Cargo.toml  LICENSE  README.md  pokemon.txt
.github/workflows/: cargo.yml
src/: lib.rs  main.rs
src/pokemon/: mod.rs  pokemon.txt
