[package]
name = "pkpw"
version = "0.1.1"
authors = ["Jesse Brooklyn Hannah <jesse@jbhannah.net>"]
edition = "2021"
license = "MIT"
description = "What if correct horse battery staple, but Pokémon."
readme = "README.md"
homepage = "https://github.com/jbhannah/pkpw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
