[package]
name = "pkpw"
version = "1.2.0"
authors = ["Jesse Brooklyn Hannah <jesse@jbhannah.net>"]
edition = "2021"
license = "MIT"
description = "What if correct horse battery staple, but Pokémon."
readme = "README.md"
repository = "https://github.com/jbhannah/pkpw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.1.0"
assert_cmd = "2.0.4"
atty = "0.2.14"
clap = { version = "4.0.14", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
